<resources>
    <string name="app_name">작은서버</string>


    <string name="action_settings">Settings</string>
    <string name="home">내 서버</string>
    <string name="hotspot">핫스팟 설정</string>
    <string name="server_setting">서버 마켓</string>
    <string name="nav_title">개발자 메뉴</string>
    <string name="server_make">서버 생성</string>
    <string name="server_upload">서버 업로드</string>
    <string name="drawer_header_text">MENU</string>
</resources>
